--- a/index.html
+++ b/index.html
@@ -10,32 +10,28 @@
 
 <body class="bg-gradient-to-br from-yellow-50 to-orange-100 text-gray-800 font-sans">
 
-  <!-- Header -->
-  <header class="bg-gradient-to-r from-red-600 to-red-700 shadow-lg sticky top-0 z-50">
+  <header class="bg-red-600 shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <h1 class="text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
       <div class="hidden md:flex space-x-6 items-center">
-        <a href="#menu" class="text-white text-lg hover:underline">Menu</a>
-        <a href="cart.html" class="relative text-white text-lg hover:underline" aria-label="Cart">
-          Cart 🛒
-          <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
+        <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
+        <a href="cart.html" class="relative text-white text-lg hover:underline">
+          Cart 🛒 <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
         </a>
-        <div id="userArea" class="text-white"></div>
+        <span id="userAreaHeader" class="text-white"></span>
       </div>
-      <!-- Hamburger for Mobile -->
-      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none" aria-label="Toggle menu">
-        <i class="fas fa-bars"></i>
-      </button>
+      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none"><i class="fas fa-bars"></i></button>
     </div>
-
-    <!-- Mobile Menu -->
-    <div id="mobileMenu" class="hidden bg-red-500 flex flex-col p-4 space-y-3 md:hidden">
-      <a href="#menu" class="text-white text-lg hover:underline">Menu</a>
-      <a href="cart.html" class="text-white text-lg hover:underline">Cart 🛒</a>
-      <div id="userAreaMobile" class="text-white"></div>
+    <div id="mobileMenu" class="hidden fixed inset-0 bg-red-600 flex flex-col items-start p-6 space-y-6 z-50 md:hidden">
+      <button id="menuClose" class="text-white text-2xl self-end focus:outline-none"><i class="fas fa-times"></i></button>
+      <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
+      <a href="cart.html" class="relative text-white text-lg hover:underline">
+        Cart 🛒 <span id="cart-count-mobile" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
+      </a>
+      <div id="userAreaMobile" class="text-white space-y-2"></div>
     </div>
   </header>
-
+  
   <!-- Hero Banner -->
   <section class="relative overflow-hidden">
     <img src="https://media.istockphoto.com/id/2161225691/vector/chef-cook-presenting-delicious-pizza-fast-food-restaurant-italian-cuisine-logo-or-emblem.jpg?s=612x612&w=0&k=20&c=kYqGIRwWUArAr4pj7EjT8f8FohVPd73i0kcr6BEX0Vk="
