--- a/login.html
+++ b/login.html
@@ -10,59 +10,56 @@
 
 <body class="bg-yellow-50 text-gray-800 font-sans">
 
-  <!-- Header -->
   <header class="bg-red-600 shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <h1 class="text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
       <div class="hidden md:flex space-x-6 items-center">
-        <a href="#menu" class="text-white text-lg hover:underline">Menu</a>
-        <a href="cart.html" class="relative text-white text-lg hover:underline" aria-label="Cart">
-          Cart 🛒
+        <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
+        <a href="cart.html" class="relative text-white text-lg hover:underline">Cart 🛒
           <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
         </a>
+        <a href="login.html" class="text-white text-lg hover:underline">Login</a>
+        <a href="signup.html" class="text-white text-lg hover:underline">Sign Up</a>
       </div>
-      <!-- Hamburger Icon -->
-      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none" aria-label="Toggle menu">
-        <i class="fas fa-bars"></i>
-      </button>
+      <button id="menuToggle" class="md:hidden text-white text-2xl"><i class="fas fa-bars"></i></button>
     </div>
-    <!-- Mobile Menu -->
     <div id="mobileMenu" class="hidden bg-red-500 flex flex-col p-4 space-y-3 md:hidden">
-      <a href="#menu" class="text-white text-lg hover:underline">Menu</a>
-      <a href="cart.html" class="text-white text-lg hover:underline">Cart 🛒</a>
+      <a href="index.html#menu" class="text-white text-lg">Menu</a>
+      <a href="cart.html" class="text-white text-lg">Cart 🛒</a>
+      <a href="login.html" class="text-white text-lg">Login</a>
+      <a href="signup.html" class="text-white text-lg">Sign Up</a>
+      <button id="menuClose" class="text-white text-lg">❌ Close</button>
     </div>
   </header>
 
-  <!-- Login Section -->
   <section class="max-w-sm mx-auto mt-20 bg-white p-8 rounded-lg shadow">
     <h2 class="text-3xl font-bold mb-6 text-center text-red-600">Login 🍕</h2>
-
-    <input id="loginEmail" type="email" placeholder="Email" aria-label="Email"
-      class="border p-3 mb-4 w-full rounded focus:ring-2 focus:ring-red-400 outline-none transition-all duration-300">
-
-    <input id="loginPassword" type="password" placeholder="Password" aria-label="Password"
-      class="border p-3 mb-6 w-full rounded focus:ring-2 focus:ring-red-400 outline-none transition-all duration-300">
-
-    <button onclick="loginUser()"
-      class="bg-red-600 text-white py-3 w-full rounded hover:bg-red-700 transition-all duration-300">Login</button>
-
-    <p class="text-center text-sm mt-4">Don't have an account?
-      <a href="signup.html" class="text-red-600 underline">Sign Up</a>
-    </p>
+    <form id="loginForm" class="space-y-4">
+      <input id="loginEmail" type="email" autocomplete="email" placeholder="Email" required class="border p-3 w-full rounded focus:ring-2 focus:ring-red-400 outline-none">
+      <input id="loginPassword" type="password" autocomplete="current-password" placeholder="Password" required class="border p-3 w-full rounded focus:ring-2 focus:ring-red-400 outline-none">
+      <button type="submit" class="bg-red-600 text-white py-3 w-full rounded hover:bg-red-700">Login</button>
+    </form>
+    <p class="text-center text-sm mt-4">Don't have an account? <a href="signup.html" class="text-red-600 underline">Sign Up</a></p>
   </section>
 
-  <!-- Footer -->
   <footer class="bg-red-600 text-white text-center py-4 mt-10">
     <p>&copy; 2025 Pizza Hub. All rights reserved.</p>
-    <div class="mt-2 space-x-6 text-2xl">
-      <a href="#" class="hover:text-yellow-300" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" class="hover:text-yellow-300" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="hover:text-yellow-300" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-    </div>
   </footer>
 
-  
-
   <script src="js/app.js"></script>
+  <script>
+    document.getElementById("menuToggle").addEventListener("click", () => {
+      document.getElementById("mobileMenu").classList.toggle("hidden");
+    });
+
+    document.getElementById("menuClose").addEventListener("click", () => {
+      document.getElementById("mobileMenu").classList.add("hidden");
+    });
+
+    document.getElementById("loginForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+      loginUser();
+    });
+  </script>
 </body>
 </html>
