--- a/checkout.html
+++ b/checkout.html
@@ -10,34 +10,27 @@
 
 <body class="bg-gray-50 text-gray-800 font-sans">
 
-  <!-- Header -->
   <header class="bg-red-600 shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
-      <h1 class="text-2xl md:text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
-
+      <h1 class="text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
       <div class="hidden md:flex space-x-6 items-center">
         <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
         <a href="cart.html" class="relative text-white text-lg hover:underline">
-          Cart 🛒
-          <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-xs px-2">0</span>
+          Cart 🛒 <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
         </a>
+        <span id="userAreaHeader" class="text-white"></span>
       </div>
-
-      <!-- Mobile Toggle -->
-      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none" aria-label="Toggle menu">
-        <i class="fas fa-bars"></i>
-      </button>
+      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none"><i class="fas fa-bars"></i></button>
     </div>
-
-    <!-- Mobile Menu -->
-    <div id="mobileMenu" class="hidden md:hidden bg-red-500 flex flex-col p-4 space-y-3">
+    <div id="mobileMenu" class="hidden fixed inset-0 bg-red-600 flex flex-col items-start p-6 space-y-6 z-50 md:hidden">
+      <button id="menuClose" class="text-white text-2xl self-end focus:outline-none"><i class="fas fa-times"></i></button>
       <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
-      <a href="cart.html" class="text-white text-lg hover:underline">
-        Cart 🛒 <span id="cart-count-mobile" class="bg-yellow-400 text-black rounded-full text-xs px-2 ml-1">0</span>
+      <a href="cart.html" class="relative text-white text-lg hover:underline">
+        Cart 🛒 <span id="cart-count-mobile" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
       </a>
+      <div id="userAreaMobile" class="text-white space-y-2"></div>
     </div>
   </header>
-
   <!-- Checkout Form -->
   <section class="max-w-2xl mx-auto p-6 mt-8">
     <h2 class="text-3xl font-bold text-center mb-8">Checkout 📦</h2>
