--- a/login.html
+++ b/login.html
@@ -15,20 +15,20 @@
       <h1 class="text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
       <div class="hidden md:flex space-x-6 items-center">
         <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
-        <a href="cart.html" class="relative text-white text-lg hover:underline">Cart 🛒
-          <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
+        <a href="cart.html" class="relative text-white text-lg hover:underline">
+          Cart 🛒 <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
         </a>
-        <a href="login.html" class="text-white text-lg hover:underline">Login</a>
-        <a href="signup.html" class="text-white text-lg hover:underline">Sign Up</a>
+        <span id="userAreaHeader" class="text-white"></span>
       </div>
-      <button id="menuToggle" class="md:hidden text-white text-2xl"><i class="fas fa-bars"></i></button>
+      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none"><i class="fas fa-bars"></i></button>
     </div>
-    <div id="mobileMenu" class="hidden bg-red-500 flex flex-col p-4 space-y-3 md:hidden">
-      <a href="index.html#menu" class="text-white text-lg">Menu</a>
-      <a href="cart.html" class="text-white text-lg">Cart 🛒</a>
-      <a href="login.html" class="text-white text-lg">Login</a>
-      <a href="signup.html" class="text-white text-lg">Sign Up</a>
-      <button id="menuClose" class="text-white text-lg">❌ Close</button>
+    <div id="mobileMenu" class="hidden fixed inset-0 bg-red-600 flex flex-col items-start p-6 space-y-6 z-50 md:hidden">
+      <button id="menuClose" class="text-white text-2xl self-end focus:outline-none"><i class="fas fa-times"></i></button>
+      <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
+      <a href="cart.html" class="relative text-white text-lg hover:underline">
+        Cart 🛒 <span id="cart-count-mobile" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
+      </a>
+      <div id="userAreaMobile" class="text-white space-y-2"></div>
     </div>
   </header>
 
@@ -47,19 +47,5 @@
   </footer>
 
   <script src="js/app.js"></script>
-  <script>
-    document.getElementById("menuToggle").addEventListener("click", () => {
-      document.getElementById("mobileMenu").classList.toggle("hidden");
-    });
-
-    document.getElementById("menuClose").addEventListener("click", () => {
-      document.getElementById("mobileMenu").classList.add("hidden");
-    });
-
-    document.getElementById("loginForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      loginUser();
-    });
-  </script>
 </body>
 </html>
