--- a/order-summary.html
+++ b/order-summary.html
@@ -14,17 +14,22 @@
   <header class="bg-red-600 shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <h1 class="text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
-      <div class="flex space-x-6 items-center">
+      <div class="hidden md:flex space-x-6 items-center">
         <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
         <a href="cart.html" class="relative text-white text-lg hover:underline">
           Cart 🛒 <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
         </a>
+        <span id="userAreaHeader" class="text-white"></span>
       </div>
       <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none"><i class="fas fa-bars"></i></button>
     </div>
-    <div id="mobileMenu" class="hidden bg-red-500 flex flex-col p-4 space-y-3 md:hidden">
+    <div id="mobileMenu" class="hidden fixed inset-0 bg-red-600 flex flex-col items-start p-6 space-y-6 z-50 md:hidden">
+      <button id="menuClose" class="text-white text-2xl self-end focus:outline-none"><i class="fas fa-times"></i></button>
       <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
-      <a href="cart.html" class="text-white text-lg hover:underline">Cart 🛒</a>
+      <a href="cart.html" class="relative text-white text-lg hover:underline">
+        Cart 🛒 <span id="cart-count-mobile" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
+      </a>
+      <div id="userAreaMobile" class="text-white space-y-2"></div>
     </div>
   </header>
 
@@ -51,13 +56,5 @@
   </footer>
 
   <script src="js/app.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      protectPage();
-      document.getElementById("menuToggle").addEventListener("click", () => {
-        document.getElementById("mobileMenu").classList.toggle("hidden");
-      });
-    });
-  </script>
 </body>
 </html>
