--- a/signup.html
+++ b/signup.html
@@ -10,18 +10,25 @@
 
 <body class="bg-yellow-50 text-gray-800 font-sans">
 
-  <!-- Header -->
   <header class="bg-red-600 shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <h1 class="text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
-      <div class="flex space-x-6 items-center">
-        <a href="#menu" class="text-white text-lg hover:underline">Menu</a>
+      <div class="hidden md:flex space-x-6 items-center">
+        <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
         <a href="cart.html" class="relative text-white text-lg hover:underline">
-          Cart 🛒
-          <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
+          Cart 🛒 <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
         </a>
-        <div id="userArea" class="text-white"></div>
+        <span id="userAreaHeader" class="text-white"></span>
       </div>
+      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none"><i class="fas fa-bars"></i></button>
+    </div>
+    <div id="mobileMenu" class="hidden fixed inset-0 bg-red-600 flex flex-col items-start p-6 space-y-6 z-50 md:hidden">
+      <button id="menuClose" class="text-white text-2xl self-end focus:outline-none"><i class="fas fa-times"></i></button>
+      <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
+      <a href="cart.html" class="relative text-white text-lg hover:underline">
+        Cart 🛒 <span id="cart-count-mobile" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
+      </a>
+      <div id="userAreaMobile" class="text-white space-y-2"></div>
     </div>
   </header>
 
