--- a/checkout.html
+++ b/checkout.html
@@ -2,35 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Checkout | Pizza Hub</title>
+  <title>Checkout | Pizza Hub 🍕</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body class="bg-gray-50 text-gray-800 font-sans">
+<!-- Navbar -->
+<nav class="bg-red-600 p-4 text-white flex justify-between items-center shadow-lg sticky top-0 z-50">
+  <a href="index.html" class="flex items-center gap-3">
+    <div class="bg-yellow-400 text-[#e31837] rounded-full w-12 h-12 flex items-center justify-center text-2xl font-bold shadow-inner hover:rotate-12 transition duration-300">
+      🍕
+    </div>
+    <h1 class="text-2xl font-extrabold tracking-wide font-sans">Pizza <span class="text-yellow-300">Hub</span></h1>
+  </a>
 
-  <header class="bg-red-600 shadow-lg sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      <h1 class="text-3xl font-extrabold text-white">Pizza Hub 🍕</h1>
-      <div class="hidden md:flex space-x-6 items-center">
-        <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
-        <a href="cart.html" class="relative text-white text-lg hover:underline">
-          Cart 🛒 <span id="cart-count" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
-        </a>
-        <span id="userAreaHeader" class="text-white"></span>
-      </div>
-      <button id="menuToggle" class="md:hidden text-white text-2xl focus:outline-none"><i class="fas fa-bars"></i></button>
-    </div>
-    <div id="mobileMenu" class="hidden fixed inset-0 bg-red-600 flex flex-col items-start p-6 space-y-6 z-50 md:hidden">
-      <button id="menuClose" class="text-white text-2xl self-end focus:outline-none"><i class="fas fa-times"></i></button>
-      <a href="index.html#menu" class="text-white text-lg hover:underline">Menu</a>
-      <a href="cart.html" class="relative text-white text-lg hover:underline">
-        Cart 🛒 <span id="cart-count-mobile" class="absolute -top-3 -right-4 bg-yellow-400 text-black rounded-full text-sm px-2">0</span>
-      </a>
-      <div id="userAreaMobile" class="text-white space-y-2"></div>
-    </div>
-  </header>
+  <div class="hidden md:flex space-x-6 text-lg font-medium">
+    <a href="index.html" class="hover:text-yellow-300 transition">Home</a>
+    <a href="order_history.html" class="hover:text-yellow-300 transition">Order History</a>
+    <a href="cart.html" class="relative hover:text-yellow-300 transition">
+      Cart
+      <span id="cart-count"
+        class="absolute -top-3 -right-4 bg-yellow-400 text-red-700 text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full hidden"></span>
+    </a>
+    <a href="feedback.html" class="text-yellow-300">Feedback</a>
+  </div>
+
+  <button id="menuToggle" class="md:hidden text-3xl focus:outline-none"><i class="fas fa-bars"></i></button>
+</nav>
+
+<!-- Mobile Menu -->
+<div id="mobileMenu" class="hidden fixed inset-0 bg-red-600 flex flex-col items-start p-6 space-y-6 z-50 md:hidden">
+  <button id="menuClose" class="text-white text-3xl self-end focus:outline-none">✕</button>
+  <a href="index.html" class="text-white text-lg hover:text-yellow-300">Home</a>
+  <a href="order_history.html" class="text-white text-lg hover:text-yellow-300">Order History</a>
+  <a href="cart.html" class="relative text-white text-lg hover:text-yellow-300">
+    Cart
+    <span id="cart-count-mobile"
+      class="absolute -top-2 -right-4 bg-yellow-400 text-red-700 text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full hidden"></span>
+  </a>
+  <a href="feedback.html" class="text-yellow-300">Feedback</a>
+</div>
+
   <!-- Checkout Form -->
   <section class="max-w-2xl mx-auto p-6 mt-8">
     <h2 class="text-3xl font-bold text-center mb-8">Checkout 📦</h2>
@@ -53,6 +67,8 @@
         class="border border-gray-300 p-3 w-full rounded focus:ring-2 focus:ring-red-400 outline-none"
         required>
 
+      <div class="text-xl font-semibold text-gray-700 border-t pt-5">Total Amount: ₹<span id="cartTotal">0</span></div>
+
       <button type="submit"
         class="bg-green-600 text-white py-3 w-full rounded text-lg hover:bg-green-700 transition-all duration-300">
         ✅ Complete Order
@@ -71,10 +87,116 @@
     </div>
   </footer>
 
- 
+  <script>
+    // Mobile menu toggle
+    document.getElementById("menuToggle").onclick = () => {
+      document.getElementById("mobileMenu").classList.toggle("hidden");
+    };
+    document.getElementById("menuClose").onclick = () => {
+      document.getElementById("mobileMenu").classList.add("hidden");
+    };
 
-  <script src="js/app.js"></script>
-  
+    // Load cart total
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    let total = cart.reduce((sum, item) => sum + (item.price * (item.quantity || 1)), 0);
+    document.getElementById("cartTotal").innerText = total;
 
+    // Order form submission
+    document.getElementById("orderForm").onsubmit = (e) => {
+  e.preventDefault();
+
+  if (cart.length === 0) {
+    alert("🛑 Your cart is empty! Please add some items.");
+    return;
+  }
+
+  const name = document.getElementById("name").value;
+  const mobile = document.getElementById("mobile").value;
+  const address = document.getElementById("address").value;
+  const city = document.getElementById("city").value;
+
+  // Build order details object
+  const orderDetails = {
+    name,
+    mobile,
+    address,
+    city,
+    items: cart
+  };
+
+  localStorage.setItem("orderDetails", JSON.stringify(orderDetails));
+  localStorage.removeItem("cart");
+
+  alert("✅ Your order has been placed successfully! 🍕🎉\nEstimated Delivery: 30-40 mins");
+  window.location.href = "order_summary.html";
+};
+
+    function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const count = cart.length;
+    const desktopBadge = document.getElementById("cart-count");
+    const mobileBadge = document.getElementById("cart-count-mobile");
+
+    if (count > 0) {
+      desktopBadge.innerText = count;
+      desktopBadge.classList.remove("hidden");
+      mobileBadge.innerText = count;
+      mobileBadge.classList.remove("hidden");
+    } else {
+      desktopBadge.classList.add("hidden");
+      mobileBadge.classList.add("hidden");
+    }
+  }
+
+  updateCartCount();
+  </script>
+<!-- //footer -->
+<footer class="bg-[#e31837] text-white">
+  <div class="max-w-7xl mx-auto px-6 py-8 flex flex-wrap justify-between items-start gap-6">
+
+    <!-- Brand Section -->
+    <div>
+      <h2 class="text-2xl font-extrabold tracking-wide flex items-center gap-2 mb-3">
+        <span class="text-yellow-400">🍕</span> Pizza Hub
+      </h2>
+      <p class="text-sm text-gray-200">Serving hot, cheesy happiness since 2025. Order now and satisfy your cravings!</p>
+
+      <!-- Social Icons -->
+      <div class="flex gap-4 mt-4 text-lg">
+        <a href="#" class="hover:text-yellow-300 transition"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="hover:text-yellow-300 transition"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="hover:text-yellow-300 transition"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="hover:text-yellow-300 transition"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="flex flex-col gap-3 text-sm font-medium">
+      <h3 class="text-lg font-semibold mb-2">Quick Links</h3>
+      <a href="#menu" class="hover:text-yellow-300 transition">Menu</a>
+      <a href="offer.html" class="hover:text-yellow-300 transition">Offers</a>
+      <a href="terms_and_conditions.html" class="hover:text-yellow-300 transition">About Us</a>
+      <a href="support.html" class="hover:text-yellow-300 transition">Support</a>
+    </div>
+
+    <!-- Contact -->
+    <div class="flex flex-col gap-3 text-sm font-medium">
+      <h3 class="text-lg font-semibold mb-2">Contact</h3>
+      <p>📞 +91 98765 43210</p>
+      <p>✉️ support@pizzahub.com</p>
+      <p>📍 Bhubaneswar, Odisha</p>
+    </div>
+
+  </div>
+
+  <!-- Bottom Bar -->
+  <div class="border-t border-white border-opacity-20 text-center text-xs py-3 px-6 flex flex-wrap justify-between items-center">
+    <p>&copy; 2025 Pizza Hub. All rights reserved.</p>
+    <div class="flex gap-4 text-sm">
+      <a href="#" class="hover:text-yellow-300 transition">Privacy Policy</a>
+      <a href="#" class="hover:text-yellow-300 transition">Terms of Service</a>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
