--- a/feedback.html
+++ b/feedback.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Your Cart | Pizza Hub</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Feedback | Pizza Hub 🍕</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 font-sans">
 
 <!-- Navbar -->
 <nav class="bg-red-600 p-4 text-white flex justify-between items-center shadow-lg sticky top-0 z-50">
@@ -18,7 +18,6 @@
     <h1 class="text-2xl font-extrabold tracking-wide font-sans">Pizza <span class="text-yellow-300">Hub</span></h1>
   </a>
 
-  <!-- Navigation Links -->
   <div class="hidden md:flex space-x-6 text-lg font-medium">
     <a href="index.html" class="hover:text-yellow-300 transition">Home</a>
     <a href="order_history.html" class="hover:text-yellow-300 transition">Order History</a>
@@ -27,10 +26,9 @@
       <span id="cart-count"
         class="absolute -top-3 -right-4 bg-yellow-400 text-red-700 text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full hidden"></span>
     </a>
-    <a href="feedback.html" class="hover:text-yellow-300 transition">Feedback</a>
+    <a href="feedback.html" class="text-yellow-300">Feedback</a>
   </div>
 
-  <!-- Mobile Menu Icon -->
   <button id="menuToggle" class="md:hidden text-3xl focus:outline-none"><i class="fas fa-bars"></i></button>
 </nav>
 
@@ -39,69 +37,94 @@
   <button id="menuClose" class="text-white text-3xl self-end focus:outline-none">✕</button>
   <a href="index.html" class="text-white text-lg hover:text-yellow-300">Home</a>
   <a href="order_history.html" class="text-white text-lg hover:text-yellow-300">Order History</a>
-  <a href="cart.html" class="text-white text-lg hover:text-yellow-300 relative">
+  <a href="cart.html" class="relative text-white text-lg hover:text-yellow-300">
     Cart
     <span id="cart-count-mobile"
       class="absolute -top-2 -right-4 bg-yellow-400 text-red-700 text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full hidden"></span>
   </a>
-  <a href="feedback.html" class="text-white text-lg hover:text-yellow-300">Feedback</a>
+  <a href="feedback.html" class="text-yellow-300">Feedback</a>
 </div>
 
-<div class="max-w-4xl mx-auto p-6 bg-white mt-6 rounded-lg shadow space-y-6">
-  <div id="cartItems" class="space-y-4"></div>
-  <div id="emptyMessage" class="text-center text-gray-600 text-lg hidden">Your cart is empty.</div>
-  <div id="cartSummary" class="text-right space-y-3 hidden">
-    <div class="text-xl font-bold">Total: ₹<span id="cartTotal"></span></div>
-    <button onclick="proceedToCheckout()"
-      class="bg-[#e31837] text-white px-6 py-3 rounded-md hover:bg-[#c7152f] text-base font-semibold transition">
-      Proceed to Checkout
-    </button>
-  </div>
+<!-- Page Heading -->
+<div class="text-center py-8">
+  <h2 class="text-4xl font-bold text-gray-800">We Value Your Feedback</h2>
+  <p class="text-gray-500 mt-2">Tell us how we did on your last order 🍕</p>
 </div>
 
+<!-- Feedback Form -->
+<div class="max-w-xl mx-auto bg-white p-8 rounded-xl shadow-md">
+  <form id="feedbackForm">
+    <div class="mb-4">
+      <label for="name" class="block text-gray-700 font-medium mb-2">Your Name</label>
+      <input type="text" id="name" required
+        class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500">
+    </div>
+    <div class="mb-4">
+      <label for="email" class="block text-gray-700 font-medium mb-2">Your Email</label>
+      <input type="email" id="email" required
+        class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500">
+    </div>
+    <div class="mb-4">
+      <label class="block text-gray-700 font-medium mb-2">Rate Us</label>
+      <div class="flex space-x-2 text-yellow-500 text-2xl">
+        <i class="fa-regular fa-star cursor-pointer hover:text-yellow-400"></i>
+        <i class="fa-regular fa-star cursor-pointer hover:text-yellow-400"></i>
+        <i class="fa-regular fa-star cursor-pointer hover:text-yellow-400"></i>
+        <i class="fa-regular fa-star cursor-pointer hover:text-yellow-400"></i>
+        <i class="fa-regular fa-star cursor-pointer hover:text-yellow-400"></i>
+      </div>
+    </div>
+    <div class="mb-6">
+      <label for="message" class="block text-gray-700 font-medium mb-2">Your Feedback</label>
+      <textarea id="message" rows="4" required
+        class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500"></textarea>
+    </div>
+    <button type="submit"
+      class="w-full bg-red-500 text-white py-3 rounded-lg font-semibold hover:bg-red-600">Submit Feedback</button>
+  </form>
+</div>
+
+<!-- Footer -->
+<footer class="text-center text-gray-500 text-sm py-6 mt-12">
+  &copy; 2025 Pizza Hub 🍕. All rights reserved.
+</footer>
+
+<!-- JS -->
 <script>
-  const cart = JSON.parse(localStorage.getItem("cart")) || [];
-  const cartItemsDiv = document.getElementById("cartItems");
-  const cartSummary = document.getElementById("cartSummary");
-  const emptyMessage = document.getElementById("emptyMessage");
-
-  if (cart.length === 0) {
-    emptyMessage.classList.remove("hidden");
-  } else {
-    let total = 0;
-    cart.forEach((item, index) => {
-      const itemTotal = item.price;
-      total += itemTotal;
-      const itemDiv = document.createElement("div");
-      itemDiv.className = "flex items-center gap-4 border-b pb-4";
-      itemDiv.innerHTML = `
-        <img src="${item.image}" class="w-24 h-24 object-cover rounded-lg">
-        <div class="flex-1">
-          <h3 class="text-lg font-bold text-gray-800">${item.name}</h3>
-          <p class="text-gray-500">Qty: ${item.quantity}</p>
-          <p class="text-yellow-600 font-semibold mt-1">₹${item.price}</p>
-        </div>
-        <button onclick="removeItem(${index})" class="text-red-600 text-sm hover:underline">Remove</button>
-      `;
-      cartItemsDiv.appendChild(itemDiv);
+  const stars = document.querySelectorAll('.fa-star');
+  stars.forEach((star, index) => {
+    star.addEventListener('click', () => {
+      stars.forEach((s, i) => {
+        s.classList.remove('fa-solid');
+        s.classList.add('fa-regular');
+        if (i <= index) {
+          s.classList.add('fa-solid');
+        }
+      });
     });
+  });
 
-    document.getElementById("cartTotal").innerText = total;
-    cartSummary.classList.remove("hidden");
-  }
+  document.getElementById('feedbackForm').addEventListener('submit', function (e) {
+    e.preventDefault();
+    alert("Thank you for your feedback!");
+    this.reset();
+    stars.forEach(star => {
+      star.classList.remove('fa-solid');
+      star.classList.add('fa-regular');
+    });
+  });
 
-  function removeItem(index) {
-    cart.splice(index, 1);
-    localStorage.setItem("cart", JSON.stringify(cart));
-    location.reload();
-  }
-
-  function proceedToCheckout() {
-    window.location.href = "checkout.html";
-  }
+  // Mobile menu
+  document.getElementById("menuToggle").onclick = () => {
+    document.getElementById("mobileMenu").classList.toggle("hidden");
+  };
+  document.getElementById("menuClose").onclick = () => {
+    document.getElementById("mobileMenu").classList.add("hidden");
+  };
 
   // Cart badge update
   function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
     const count = cart.length;
     const desktopBadge = document.getElementById("cart-count");
     const mobileBadge = document.getElementById("cart-count-mobile");
@@ -118,15 +141,6 @@
   }
 
   updateCartCount();
-
-  // Mobile menu toggle
-  document.getElementById("menuToggle").addEventListener("click", () => {
-    document.getElementById("mobileMenu").classList.toggle("hidden");
-  });
-  document.getElementById("menuClose").addEventListener("click", () => {
-    document.getElementById("mobileMenu").classList.add("hidden");
-  });
-
 </script>
 <!-- //footer -->
 <footer class="bg-[#e31837] text-white">
