--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <!-- Footer Logout -->
   <div class="border-t pt-4">
-    <button onclick="logoutUser()" class="w-full border text-red-600 font-semibold py-2 rounded-lg hover:bg-red-50 transition flex items-center justify-center gap-2">
+    <button id="logoutBtn" onclick="logoutUser()" class="w-full border text-red-600 font-semibold py-2 rounded-lg hover:bg-red-50 transition flex items-center justify-center gap-2">
       <i class="fas fa-sign-out-alt"></i> Logout
     </button>
   </div>
